objects/Hold_Per_Day_Total__c.object
<CustomObject>
    <fields>
        <fullName>HPD_TTM_Daily_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>HPD TTM Daily Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPD_TTM_Funds_In_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>HPD TTM Funds In Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPD_TTM_Funds_Out_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>HPD TTM Funds Out Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPD_TTM_Location_Share__c</fullName>
        <formula>HPD_TTM_NTI__c *0.3464</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HPD TTM Location Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPD_TTM_NTI__c</fullName>
        <defaultValue>0</defaultValue>
        <label>HPD TTM NTI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPD_TTM_Nbr_of_Records_Found__c</fullName>
        <defaultValue>0</defaultValue>
        <label>HPD TTM # of Records Found</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HPD_TTM_Revenue_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>HPD TTM Revenue Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPD_Total_VGT_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Uses Avg VGT Count from the HPD for the location for the last 12 months</inlineHelpText>
        <label>HPD Total VGT Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_Type__c</fullName>
        <formula>IF(  !ISBLANK(Account__c) , 
          TEXT(Account__r.Type) , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Recent_HPD_Date__c</fullName>
        <formula>Most_Recent_HPD__r.Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Most Recent HPD Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Most_Recent_HPD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Most Recent HPD</label>
        <referenceTo>Hold_Per_Day__c</referenceTo>
        <relationshipLabel>Hold Per Day Totals</relationshipLabel>
        <relationshipName>Hold_Per_Day_Totals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Municipality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Municipality</label>
        <referenceTo>Municipality__c</referenceTo>
        <relationshipLabel>Hold Per Day Totals</relationshipLabel>
        <relationshipName>Hold_Per_Day_Totals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name_Field_Store__c</fullName>
        <description>Field Exists merely for tech reasons so that we can dynamically create an sObject in code and store the name field.</description>
        <inlineHelpText>Field Exists merely for tech reasons so that we can dynamically create an sObject in code and store the name field.</inlineHelpText>
        <label>Name Field Store</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Dummy_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A demo account.</description>
        <inlineHelpText>A demo account.</inlineHelpText>
        <label>Portal Dummy Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Position</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TSM_Avg__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TSM Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TSM_Total_Nbr_of_Days_in_Months__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TSM Total # of Days in Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TTM_Avg__c</fullName>
        <defaultValue>0</defaultValue>
        <description>USed for Montly Hpd Records (ie Locations) ie (Accounts) since there is no hold_per_day__c.hpd__c  value. for dailys we can only use this for monthlies.</description>
        <label>TTM Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TTM_Total_Nbr_of_Days_in_Months__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TTM Total # of Days in Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Nbr_of_Days_in_Months_12_Weeks__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total # of Days in Months (12 Weeks)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Nbr_of_Days_in_Months_4_Weeks__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total # of Days in Months (4 Weeks)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Nbr_of_Days_in_Months_8_Weeks__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total # of Days in Months (8 Weeks)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Nbr_of_HPD_Records__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total # of HPD Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Twelve_Week_HPD_Avg__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Based on Monthly HPD Records. Aggregates HPD data for 3 Months.. (Revenue Total /  # of Vgts) / 3. If Not enough data available, will display a blank value.</inlineHelpText>
        <label>12 Week HPD Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Twelve_Week_HPD__c</fullName>
        <description>Aggregates HPD data for the last 12 weeks.  
For Machines....(Revenue Total / 90)  
For Locations.....(Revenue Total /  # of Vgts) / 3
If not enough data to calculate.. the value will be empty.</description>
        <formula>/**
 * If Machine (ie Asset)
 *   Make sure we have enough HPD Data to eval ie. at least 12 weeks or 90 days.. if so
 *   calc rev / # of days... if not return null.
 *
 * If Location (ie Account)
 *   We are using monthlys so only need to look for 3 in this case.
 *   Also adding Total Vgt Count into the calc. 
 */
CASE( 
   RecordType.Name,
   &quot;Machine&quot;,
      IF( HPD_Nbr_of_Records_12_Weeks__c&gt;=90, HPD_Revenue_Total_12_Weeks__c / 90 ,null),
   &quot;Location&quot;,
       IF( HPD_Nbr_of_Records_12_Weeks__c&gt;=3, Twelve_Week_HPD_Avg__c ,null)
   ,null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Based on Monthly HPD Records. Aggregates HPD data for 3 Months.. (Revenue Total /  # of Vgts) / 3. If Not enough data available, will display a blank value.</inlineHelpText>
        <label>12 Week HPD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Hold Per Day Total</label>
    <listViews>
        <fullName>ALL_Locations</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Location_Type__c</columns>
        <columns>Municipality__c</columns>
        <columns>Most_Recent_HPD_Date__c</columns>
        <columns>HPD_Amount_Won_12_Weeks__c</columns>
        <columns>HPD_Amount_Played_12_Weeks__c</columns>
        <columns>Total_Nbr_of_HPD_Records__c</columns>
        <columns>HPD_TTM_Avg__c</columns>
        <columns>HPD_TSM_Avg__c</columns>
        <columns>Twelve_Week_HPD__c</columns>
        <columns>Eight_Week_HPD__c</columns>
        <columns>Four_Week_HPD__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Hold_Per_Day_Total__c.Location</value>
        </filters>
        <filters>
            <field>Frequency__c</field>
            <operation>equals</operation>
            <value>Monthly</value>
        </filters>
        <filters>
            <field>Most_Recent_HPD_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>ALL Locations</label>
    </listViews>
    <listViews>
        <fullName>ALL_Machines</fullName>
        <columns>NAME</columns>
        <columns>Asset__c</columns>
        <columns>Municipality__c</columns>
        <columns>Account__c</columns>
        <columns>HPD_TTM_Avg__c</columns>
        <columns>Twelve_Week_HPD__c</columns>
        <columns>Eight_Week_HPD__c</columns>
        <columns>Four_Week_HPD__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>HPD_Nbr_of_Records_8_Weeks__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Hold_Per_Day_Total__c.Machine</value>
        </filters>
        <label>ALL Machines</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Municipalities</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Municipality__c</columns>
        <columns>Frequency__c</columns>
        <columns>HPD_Municipality_Funds_In_Avg__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>HPD_Municipality_Funds_Out_Total_12weeks__c</columns>
        <columns>HPD_Municipality_Funds_Out_Total_8_Weeks__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Hold_Per_Day_Total__c.Municipality</value>
        </filters>
        <filters>
            <field>Frequency__c</field>
            <operation>equals</operation>
            <value>Monthly</value>
        </filters>
        <label>All Municipalities</label>
    </listViews>
    <listViews>
        <fullName>HPD_Total_The_Walnut_SpeakEasy</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Location_Type__c</columns>
        <columns>Municipality__c</columns>
        <columns>Most_Recent_HPD_Date__c</columns>
        <columns>Total_Nbr_of_HPD_Records__c</columns>
        <columns>HPD_TTM_Avg__c</columns>
        <columns>HPD_TSM_Avg__c</columns>
        <columns>Twelve_Week_HPD__c</columns>
        <columns>Eight_Week_HPD__c</columns>
        <columns>Four_Week_HPD__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Hold_Per_Day_Total__c.Location</value>
        </filters>
        <filters>
            <field>Frequency__c</field>
            <operation>equals</operation>
            <value>Monthly</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>The Walnut SpeakEasy</value>
        </filters>
        <label>HPD Total The Walnut SpeakEasy</label>
    </listViews>
    <listViews>
        <fullName>Hold_Per_Day_Total_Doghouse_on_the_bea</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Location_Type__c</columns>
        <columns>Municipality__c</columns>
        <columns>Most_Recent_HPD_Date__c</columns>
        <columns>Total_Nbr_of_HPD_Records__c</columns>
        <columns>HPD_TTM_Avg__c</columns>
        <columns>HPD_TSM_Avg__c</columns>
        <columns>Twelve_Week_HPD__c</columns>
        <columns>Eight_Week_HPD__c</columns>
        <columns>Four_Week_HPD__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Hold_Per_Day_Total__c.Location</value>
        </filters>
        <filters>
            <field>Frequency__c</field>
            <operation>equals</operation>
            <value>Monthly</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>Doghouse On Beach</value>
        </filters>
        <label>Hold Per Day Total (Doghouse on the bea)</label>
    </listViews>
    <listViews>
        <fullName>JAKESHPDT</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Location_Type__c</columns>
        <columns>Municipality__c</columns>
        <columns>Most_Recent_HPD_Date__c</columns>
        <columns>Total_Nbr_of_HPD_Records__c</columns>
        <columns>HPD_TTM_Avg__c</columns>
        <columns>HPD_TSM_Avg__c</columns>
        <columns>Twelve_Week_HPD__c</columns>
        <columns>Eight_Week_HPD__c</columns>
        <columns>Four_Week_HPD__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Hold_Per_Day_Total__c.Location</value>
        </filters>
        <filters>
            <field>Frequency__c</field>
            <operation>equals</operation>
            <value>Monthly</value>
        </filters>
        <filters>
            <field>Most_Recent_HPD_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>JAKES</value>
        </filters>
        <label>Hold Per Day Total (JAKES)</label>
    </listViews>
    <listViews>
        <fullName>Walsh_s_Bar_and_Grill</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Location_Type__c</columns>
        <columns>HPD_Total_VGT_Count__c</columns>
        <columns>HPD_TTM_Avg__c</columns>
        <columns>Twelve_Week_HPD__c</columns>
        <columns>Eight_Week_HPD__c</columns>
        <columns>Four_Week_HPD__c</columns>
        <columns>HPD_Municipality_Accel_Avg__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Hold_Per_Day_Total__c.Location</value>
        </filters>
        <filters>
            <field>Portal_Dummy_Account__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Demo Hold Per Day Totals</label>
    </listViews>
    <nameField>
        <displayFormat>HPDT-{000000000}</displayFormat>
        <label>HPD Total #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hold Per Day Totals</pluralLabel>
    <recordTypes>
        <fullName>Location</fullName>
        <active>true</active>
        <label>Location</label>
    </recordTypes>
    <recordTypes>
        <fullName>Machine</fullName>
        <active>true</active>
        <label>Machine</label>
    </recordTypes>
    <recordTypes>
        <fullName>Municipality</fullName>
        <active>true</active>
        <label>Municipality</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>